# MoonstoneServer

./: .gitignore  Cargo.toml  build.rs
db/: Cargo.toml
db/src/: lib.rs  main.rs  models.rs  tests.rs
db/src/operations/: account.rs  community.rs  member.rs  message.rs  session.rs
entity/: Cargo.toml
entity/src/: account.rs  community.rs  lib.rs  message.rs  mod.rs  permission.rs  prelude.rs  project.rs  session.rs  todo.rs
examples/: channel.rs
migration/src/: m20220101_000001_create_table.rs
sfu/: Cargo.toml
sfu/src/: connection.rs  lib.rs
src/: exceptions.rs  main.rs  settings.rs
src/handlers/: account.rs  community.rs  message.rs  session.rs
src/models/: account.rs  community.rs  event.rs  message.rs  mod.rs  session.rs
src/utils/: connection.rs  email.rs  mod.rs  model.rs  password.rs  sequence.rs  session.rs
src/views/: account.rs  channel.rs  community.rs  message.rs  mod.rs  session.rs
