[package]
name = "moonstone-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oblivion = { path = "../oblivion" }
moonstone_db = { path = "./db" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5" }
rand = "0.8"
thiserror = "1"
regex = "1"
lazy_static = "1"
chrono = "0.4"
anyhow = "1.0"
