[package]
name = "moonstone-server"
version = "0.3.0-alpha.1"
description = "基于 Oblivion 通讯协议的端到端加密链路即时通讯服务端"
authors = ["苏向夜 <fu050409@163.com>"]
license = "AGPLv3"
repository = "https://github.com/noctisynth/MoonstoneServer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oblivion = { path = "../oblivion" }
moonstone_db = { path = "./db" }
moonstone_sfu = { path = "./sfu" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5" }
rand = "0.8"
thiserror = "1"
regex = "1"
lazy_static = "1"
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.19.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[example]]
name = "channel"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
