[package]
name = "moonstone_sfu"
version = "0.1.0"
description = "月长石选择转发器"
authors = ["苏向夜 <fu050409@163.com>"]
license = "AGPLv3"
repository = "https://github.com/noctisynth/Moonstone"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rayon = "1.10.0"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
